# mail-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: codex_config.example.toml  thread_output.example.json
src/netease_mail_mcp/: __init__.py  cli.py  config.py  email_parser.py  imap_client.py  mcp_server.py  reply_status.py  reply_tasks.py  schemas.py  thread_builder.py
src/netease_mail_mcp/prompts/: extract_reply_tasks.md
tests/: test_email_parser.py  test_reply_status.py
tests/fixtures/: sample_email.eml
